# microservices-basis

./: README.md
diagrams/: api_gateway.drawio
services/: docker-compose.yml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: config.py  core.py  main.py  network.py
services/gateway/app/api/api_v1/: api.py
services/gateway/app/api/api_v1/endpoints/auth/: errors.py  routes.py
services/gateway/app/api/api_v1/endpoints/users/: routes.py
services/gateway/app/api/dependencies/: deps.py  errors.py
services/gateway/app/api/service_endpoints/users/: routes.py
services/gateway/app/core/: __init__.py  errors.py  gw_route.py  utils.py
services/gateway/app/crud/: base.py  user.py
services/gateway/app/db/: __init__.py  session.py
services/gateway/app/models/: user.py
services/gateway/app/schemas/: __init__.py  auth.py  user.py
services/gateway/app/services/: __init__.py  auth.py
services/users/: .env  .isort.cfg  Dockerfile  pyproject.toml
services/users/alembic/: env.py
services/users/alembic/versions/: 206a524cd678_user_model.py  6239248796e4_init.py
services/users/app/: config.py  main.py
services/users/app/api/: deps.py
services/users/app/api/api_v1/: api.py
services/users/app/api/api_v1/endpoints/: users.py
services/users/app/api/api_v1/endpoints/auth/: routes.py
services/users/app/api/api_v1/endpoints/users/: errors.py  routes.py
services/users/app/api/dependencies/: deps.py  errors.py
services/users/app/core/: auth.py  config.py
services/users/app/crud/: base.py  user.py
services/users/app/db/: session.py
services/users/app/models/: user.py
services/users/app/schemas/: __init__.py  auth.py  user.py
services/users/app/services/: auth.py
