[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.12.3"
fastapi = "0.62.0"
alembic = "1.4.3"
psycopg2-binary = "2.8.6"
email-validator = "1.1.2"
passlib = "1.7.4"
pydantic = "1.7.3"
bcrypt = "3.2.0"
fastapi-jwt-auth = "0.5.0"
aiohttp = "3.7.3"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 100
multi_line_output = 3
reverse_relative = true
skip_glob = "**/migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
