[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.12.3"
fastapi = "0.62.0"
SQLAlchemy = "1.3.20"
FastAPI-SQLAlchemy = "0.2.1"
alembic = "1.4.3"
psycopg2-binary = "2.8.6"
python-dotenv = "0.15.0"
PyJWT = "2.0.1"
passlib = "1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
