[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.12.3"
fastapi = "0.62.0"
SQLAlchemy = "1.3.20"
FastAPI-SQLAlchemy = "0.2.1"
alembic = "1.4.3"
psycopg2-binary = "2.8.6"
python-dotenv = "0.15.0"
PyJWT = "2.0.1"
python-jose = {extras = ["cryptography"], version = "3.2.0"}
email-validator = "1.1.2"
pydantic = "1.7.3"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "3.2.0"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 100
multi_line_output = 3
reverse_relative = true
skip_glob = "**/migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
